crates/zakura-rpc/src/methods/tests/snapshots/get_peer_info@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: get_peer_info
---
[
  {
    "addr": "127.0.0.1:8233",
    "subver": "",
    "version": 0,
    "inbound": false
  }
]
