crates/zakura-rpc/src/methods/tests/snapshots/get_peer_info@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: get_peer_info
---
[
  {
    "addr": "127.0.0.1:18233",
    "subver": "",
    "version": 0,
    "inbound": false
  }
]
